<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListaCombustiveisActivity">

    <TextView
        android:id="@+id/titleListaCombustiveis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_lista_combustiveis"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        />

    <ListView
        android:id="@+id/listaCombustiveis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/combustiveis"
        app:layout_constraintTop_toBottomOf="@id/titleListaCombustiveis"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>